# firestarter

./: .gitignore  AUTHORS  Doxyfile  MAREfile  Makefile.am  README  configure.ac  makefile  rules.mk
conf_example/: dummy.cfg  fs.cfg  logging.cfg  signalemitter.cfg  signalreceiver.cfg  webserver.cfg
configuration/: fs.cfg  lighttpd.conf  logging.cfg
configuration/modules/: persistance.cfg  sqlite_backend.cfg  webinterface.cfg  wtserver.cfg
m4/: soci.m4
protobuf/: module.proto
redist/mirror-lib/: BUILDING  CHANGELOG  README  redist.txt
redist/mirror-lib/include/lagoon/: lagoon.hpp  meta_objects.hpp  utils.hpp
redist/mirror-lib/include/lagoon/auxiliary/: object_getter.hpp  polymorph_factory.hpp  sequence_holder.hpp
redist/mirror-lib/include/lagoon/range/: container.hpp  find_if.hpp  for_each.hpp  offset.hpp  transform.hpp  utils.hpp
redist/mirror-lib/include/lagoon/utils/: mijson_factory.hpp  rapidxml_factory.hpp  sdn_factory.hpp  soci_factory.hpp  wx_gui_factory.hpp
redist/mirror-lib/include/mirror/: cntnr_kind_tags.hpp  cntnr_op_param_tags.hpp  config.hpp  ct_string.hpp  factory.hpp  intrinsic.hpp  invoker.hpp  meta_namespace.hpp  meta_prog.hpp  meta_typedef.hpp  mirror.hpp  mirror_base.hpp  specifier_tags.hpp  type_traits.hpp  using_directive.hpp
redist/mirror-lib/include/mirror/auxiliary/: argument_type_list.hpp  by_name.hpp  (+15 more)
redist/mirror-lib/include/puddle/: meta_object_tags.hpp  puddle.hpp
redist/mirror-lib/include/rubber/: meta_meta_object.hpp  meta_objects.hpp
redist/mirror-lib/lagoon/: categories.hpp  config.hpp  interfaces.hpp  lagoon_fwd.hpp  polymorph_factory.hpp  ranges.hpp  reflection.hpp  specifiers.hpp
redist/mirror-lib/lagoon/auxiliary/: fwd.hpp  meta_objects.hpp  meta_objects_common.hpp  object_getter.hpp  range_maker.hpp  specifier_getter.hpp
redist/mirror-lib/lagoon/range/: chain.hpp  contains.hpp  extract.hpp  flatten.hpp  fold.hpp  fwd_decl.hpp  limit.hpp  link.hpp  only_if.hpp  sort.hpp  std_range.hpp  until.hpp
redist/mirror-lib/lagoon/utils/: libpq_factory.hpp  script_factory.hpp  sql_factory.hpp  wxxml_factory.hpp
redist/mirror-lib/mirror/: all.hpp  by_name.hpp  class_gen.hpp  concept_check.hpp  constructor_tags.hpp  meta_class.hpp  meta_container.hpp  meta_enum.hpp  meta_function.hpp  meta_meta_object.hpp  meta_object_tags.hpp  meta_std_container.hpp  meta_type.hpp  meta_type_template.hpp  meta_variable.hpp  mirror_fwd.hpp  object_tagging.hpp  preprocessor.hpp  stream.hpp
redist/mirror-lib/mirror/auxiliary/: calling_convention.hpp  class_gen.hpp  class_layout.hpp  constructors.hpp  containers.hpp  counter.hpp  decorated_type_name.hpp  dyn_library.hpp  factory.hpp  member_variables.hpp  scoped_named.hpp  static_pow10.hpp  using_directive.hpp
redist/mirror-lib/mirror/concept_check/: meta_constructor.hpp  meta_function.hpp  meta_inheritance.hpp  meta_meta_object.hpp  meta_namespace.hpp  meta_scoped_object.hpp  meta_type.hpp  meta_variable.hpp
redist/mirror-lib/mirror/ct_string/: at.hpp  c_str.hpp  char_type.hpp  compare.hpp  concat.hpp  front.hpp  head.hpp  slice.hpp  starts_with.hpp
redist/mirror-lib/mirror/doc/: concepts.hpp  concepts_container.hpp  factory_generator.hpp  reflection.hpp  registering.hpp  theory.hpp  usage.hpp
redist/mirror-lib/mirror/meta_prog/: accumulate.hpp  and.hpp  append.hpp  before.hpp  can_be_called.hpp  concat.hpp  find.hpp  for_each.hpp  identity.hpp  is_a.hpp  iter_info.hpp  lacks.hpp  not.hpp  only_if.hpp  optional.hpp  or.hpp  prepend.hpp  range.hpp  traits.hpp  transform.hpp  unique.hpp
redist/mirror-lib/mirror/pre_registered/: basic.hpp
redist/mirror-lib/mirror/raw_ptr/: auditor.hpp  raw_ptr.hpp  type_info_cmp.hpp
redist/mirror-lib/mirror/stream/: base.hpp  json.hpp  meta_xml.hpp  simple_struct.hpp  xml.hpp
redist/mirror-lib/mirror/utils/: boostfs_factory.hpp  default_suppliers.hpp  enum_val_by_name.hpp  lex_conv.hpp  native_types.hpp  polymorph_factory.hpp  quick_reg.hpp  script_factory.hpp  soci_factory.hpp  some_type.hpp  wx_gui_factory.hpp
redist/mirror-lib/puddle/: categories.hpp  config.hpp  specifiers.hpp
redist/mirror-lib/puddle/auxiliary/: ct_string.hpp  fwd.hpp  integer.hpp  meta_instance.hpp  meta_objects.hpp  specifier.hpp  wrap.hpp
redist/mirror-lib/puddle/doc/: concepts.hpp
redist/mirror-lib/rubber/: config.hpp  meta_object.hpp  range.hpp  rubber.hpp  specifiers.hpp  wrap.hpp
redist/mirror-lib/rubber/operation/: read_from_istream.hpp  write_to_ostream.hpp
src/: rules.mk
src/common/: exceptions.h  exceptions.hpp  foreach.h  helper.cpp  helper.h  helper.hpp  log.cpp  log.h  log.hpp  module.cpp  module.h  module.hpp  persistent.hpp  simplecache.h  simplecache.hpp  status.proto  zmqhelper.h
src/common/clients/: instancemanager.h  instancemanager.hpp
src/common/persistent/: keywords.hpp  lexer.hpp  storage.hpp
src/common/webwidgets/: basepage.cpp  basepage.h  basepage.hpp  htmltemplates.h  htmltemplates.hpp
src/common/zmq/: zmq.hpp  zmqhelper.h  zmqhelper.hpp  zmqsocket.cpp  zmqsocket.h  zmqsocket.hpp
src/fs/: dependencygraph.cpp  dependencygraph.h  dependencygraph.hpp  instancemanager.cpp  instancemanager.h  instancemanager.hpp  main.cpp  main.h  main.hpp  modulemanager.cpp  modulemanager.h  modulemanager.hpp  rules.mk
src/fs/tests/: modulemanager_tests.cpp
src/modules/: rules.mk
src/modules/core/: rules.mk
src/modules/core/dummy/: dummy.cpp  dummy.h  rules.mk
src/modules/core/servicelookup/: servicelookup.cpp  servicelookup.h  servicelookup.hpp
src/modules/core/signalEmitter/: rules.mk  signalemitter.cpp  signalemitter.h
src/modules/core/signalReceiver/: rules.mk  signalreceiver.cpp  signalreceiver.h
src/modules/core/webInterface/: blankpage.cpp  blankpage.h  blankpage.hpp  htmltemplates.cpp  htmltemplates.h  mainpage.cpp  mainpage.h  mainpage.hpp  router.cpp  router.h  router.hpp  webinterface.cpp  webinterface.h  webinterface.hpp
src/modules/core/webServer/: webserver.cpp  webserver.h
src/modules/core/wtserver/: wtserver.cpp  wtserver.h
src/modules/examples/persistance/: persistance.cpp  persistance.hpp  person.hpp
(+201 files in other folders)
